--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,9 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.2.*"
+	},
+	"autoload": {
+		"files": ["src/Falco/load.php"],
+		"psr-4": {"Falco\\": "src/Falco"}
 	}
 }
